--- a/app/views/zh/index.html.erb
+++ b/app/views/zh/index.html.erb
@@ -34,7 +34,7 @@
         <div class="slide" id="landing-slide">
           <section class="middle">
             <p style="font-size:250%">感谢您阅读我的个人简历</p>
-            <p>2013<span id="left-init-key" class="key"></span>03<span id="left-init-key" class="key"></span>01</p>
+            <p>2014<span id="left-init-key" class="key"></span>03<span id="left-init-key" class="key"></span>15</p>
             <p style="font-size:150%">按 <span id="left-init-key" class="key">&rarr;</span> 键前进 O(∩_∩)O~</p>
           </section>
           <aside class="note">
@@ -85,7 +85,8 @@
               <tr><th>邮箱地址</th><td>tony_doofy@163.com</td></tr>
               <tr><th>籍贯</th><td>浙江宁波</td></tr>
               <tr><th>教育经历</th><td>2009.9-2013.6 杭州师范大学杭州国际服务工程学院</td></tr>
-              <tr><th>工作经验</th><td>2012.10-2013.2 银江股份·智能交通创新协调中心</td></tr>
+              <tr><th rowspan="2">工作经验</th><td>2012.10-2013.2 银江股份·智能交通创新协调中心</td></tr>
+              <tr><td>2013.5.15-2014.3.15 杭州脸脸会网络技术有限公司</td></tr>
 
               <tr>
                 <th rowspan="4">奖惩情况</th>
@@ -117,22 +118,29 @@
 
         <h2>自我介绍</h2>
         <hr>
-        汤可吉，大四学生，爱笑，乐观开朗，喜欢交朋友，爱好广泛，对自己未知的大部分东西都感兴趣；<br />
-        &nbsp;&nbsp;熟练使用php/ruby、js, 喜欢rails，但只是自己捣鼓，没有项目经验，熟悉spine(js的一个MVC框架)、jquery；<br />
-        &nbsp;&nbsp;&nbsp;&nbsp;喜欢玩交互设计、美工、精简设计，浏览各种国外网站，擅长PS、AE，玩过html5游戏开发；<br />
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;熟悉ubuntu、git、敏捷开发,乐于分享,研究web算法，使用主流的关联数据库，NOSQL没经验；<br />
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;缺点：没有养成多写文档的好习惯，记录的事情不够有条理，有时候会钻牛角尖<br />
+        汤可吉<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;1年以上Rails&Ruby开发；<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;喜欢玩交互设计、美工、精简设计，浏览各种国外网站，擅长PS、AE;<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;熟悉ubuntu环境，rails，git，mongodb，redis, TDD开发;<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;有责任心，自驱力强 。<br/>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br />
         阅读书籍：《ruby编程语言》、《Web敏捷开发之道_应用Rails进行Web敏捷开发》、《ruby on rails社区网站开发》、
         《基于MVC的JavaScript Web 富应用开发》、《web智能算法》等
 
         <h2>开发经验</h2>
         <hr>
-        智能交通多源异类模拟诱导屏（web版）<br />
-        实时交通路况系统（web版，android版）<br />
-        交通云（基于openstack）<br />
-        服务流程控制（基于mule esb）<br />
-        浙江省信息安全产业技术创新战略联盟 <a style="color:blue;" href="http://www.zjisa.com" target="_blank">http://zjisa.com</a> <br />
-        智能交通与安全实验室 <a style="color:blue;" href="http://its.hznu.edu.cn" target="_blank">http://its.hznu.edu.cn</a> <br />
+        1.智能交通多源异类模拟诱导屏（web版）<br />
+        2.实时交通路况系统（web版，android版）<br />
+        3.交通云（基于openstack）<br />
+        4.服务流程控制（基于mule esb）<br />
+        5.浙江省信息安全产业技术创新战略联盟 <a style="color:blue;" href="http://www.zjisa.com" target="_blank">http://zjisa.com</a> <br />
+        6.智能交通与安全实验室 <a style="color:blue;" href="http://its.hznu.edu.cn" target="_blank">http://its.hznu.edu.cn</a> <br />
+        7.负责脸脸数据统计、商家后台改版,<br/>
+          &nbsp;&nbsp;&nbsp;少量服务端接口开发、修改,<br/>
+          &nbsp;&nbsp;&nbsp;商家后台新功能开发(问答系统、相册、照片墙管理、自定义菜单等),<br/>
+          &nbsp;&nbsp;&nbsp;即立方产品开发（手机网站、微信管理、脸脸app三合一产品）,<br/>
+          &nbsp;&nbsp;&nbsp;即立方业务系统, 游戏开发（堆木头、刮刮卡、大转盘）<a style="color:blue;" href="http://www.dface.cn" target="_blank">http://www.dface.cn</a><br />
+
 
 
         <img style="position:absolute;left:500px;top:300px;" src="aza3.png"></img>
@@ -154,12 +162,12 @@
 
       <h2>交流</h2>
       <hr>
+      <p>
       网名：蔚蓝星魂（同新浪微博）<br />
-      github：<a style="color:blue;" href="https://github.com/wlxhsjjqtlcs" target="_blank">https://github.com/wlxhsjjqtlcs</a> <br />
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a style="color:blue;" href="https://github.com/tdseed" target="_blank">https://github.com/tdseed</a> <br />
-       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="color:blue;" href="https://github.com/tdbutterfly" target="_blank">https://github.com/tdbutterfly</a>(blog)<br />
-      heroku: <a style="color:blue;" href="http://tdseed.herokuapp.com/" target="_blank">http://tdseed.herokuapp.com/</a> <br />
-      Personal site: <a style="color:blue;" href="http://tdbutterfly.com" target="_blank">http://tdbutterfly.com</a>
+      github：<a style="color:blue;" href="https://github.com/tdseed" target="_blank">https://github.com/tdseed</a> <br />
+      Ruby China: <a style="color:blue;" href="http://ruby-china.org/tdseed" target="_blank">tdseed</a> <br />
+      Personal site: <a style="color:blue;" href="http://tdbutterfly.com" target="_blank">http://wlxh.logdown.com/</a>
+      </p>
 
         </section>
       </div>
