--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,208 +1,21 @@
-<!DOCTYPE html>
-
-<html manifest="cache.appcache">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
-    <title>简历web版</title>
-    <link href="http://fonts.googleapis.com/css?family=Droid+Sans|Droid+Sans+Mono" rel="stylesheet" type="text/css" />
-    <link id="prettify-link" href="src/prettify/prettify.css" rel="stylesheet" disabled />
-    <link href="styles/fonts.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="styles/presentation.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="styles/common.css" rel="stylesheet" type="text/css" media="screen" />
-    <link class="theme" href="styles/default.css" rel="stylesheet" type="text/css" media="screen" />
-    <link class="theme" href="styles/moon.css" rel="stylesheet" type="text/css" media="screen" />
-    <link class="theme" href="styles/sand.css" rel="stylesheet" type="text/css" media="screen"/>
-    <link class="theme" href="styles/sea_wave.css" rel="stylesheet" type="text/css" media="screen"/>
-  </head>
-  <body>
-    <div id="flex-container">
-    <nav id="helpers">
-      <button title="Previous slide" id="nav-prev" class="nav-prev">&#8701;</button> 
-      <button title="Jump to a random slide" id="slide-no">5</button> 
-      <button title="Next slide" id="nav-next" class="nav-next">&#8702;</button>
-      <menu>
-        <button type="checkbox" data-command="toc" title="Table of Contents" class="toc">TOC</button>
-        <button type="checkbox" data-command="resources" title="View Related Resources">&#9734;</button>
-        <button type="checkbox" data-command="notes" title="View Slide Notes">&#9999;</button>
-        <button type="checkbox" data-command="source" title="View slide source">&#8635;</button>
-        <button type="checkbox" data-command="help" title="View Help">?</button>
-      </menu>
-    </nav>
-    <div class="slides">
-      <div id="presentation-counter">Loading...</div>
-        <div class="slide" id="landing-slide">
-          <section class="middle">
-            <p style="font-size:250%">感谢您阅读我的个人简历</p>
-            <p>2013<span id="left-init-key" class="key"></span>03<span id="left-init-key" class="key"></span>01</p>
-            <p style="font-size:150%">按 <span id="left-init-key" class="key">&rarr;</span> 键前进 O(∩_∩)O~</p>
-          </section>
-          <aside class="note">
-            <section>
-            </section>
-          </aside> 
+<html>
+    <head>
+        <title>Express</title>
+        <style type="text/css" >
+            html{ width: 100%; height: 1650px;}
+            body
+            {
+                background:url(a.jpg) top center no-repeat;
+            }
+            .text{
+              margin:60px 120px;
+            }
+        </style>
+    </head>
+    <body>
+        <br>
+        <div class="text">
+        <h1>Hi all, I'm a Robot. <a href="/zh">Touch me.</a> </h1>
         </div>
-
-
-       <div class="slide offline-storage" id="quota-api">
-          <header></header>
-          <style>
-            #quota-api table {
-              width: 100%;
-              border-collapse: collapse;
-              margin-top: 40px;
-            }
-            #quota-api th {
-              font-weight: 600;
-              text-align: left;
-            }
-            #quota-api td,
-            #quota-api th {
-              border: 1px solid #222;
-              padding: 5px 10px;
-              vertical-align: top;
-            }
-            .quota-info-bubble {
-              background-color: #FCFCE4;
-              border: 1px solid yellow;
-              font-size: 80%;
-              padding: 5px;
-            }
-            .quota-info-bubble input, .quota-info-bubble button {
-              font-size: 12px;
-            }
-            .quota-info-bubble span {
-              display: block;
-            }
-          </style>
-          <section>
-            <table border="0" cellspacing="5" cellpadding="5">
-              <tr><th>姓名</th><td>汤可吉</td><th>性别</th><td>男</td></tr>
-              <tr><th>民族</th><td>汉</td><th>出生年月</th><td>1990.12.19</td></tr>
-              <tr><th>学历</th><td>本科</td><th>院校</th><td>杭州师范大学杭州国际服务工程学院</td></tr>
-              <tr><th>专业</th><td>信息与计算科学(金融服务方向)</td><th>联系电话</th><td>15868169874</td></tr>
-              <tr><th>联系地址</th><td>杭州市西湖区文一路222号</td><th>邮编</th><td>310000</td></tr>
-              <tr><th>邮箱地址</th><td>tony_doofy@163.com</td></tr>
-              <tr><th>籍贯</th><td>浙江宁波</td></tr>
-              <tr><th>教育经历</th><td>2009.9-2013.6 杭州师范大学杭州国际服务工程学院</td></tr>
-              <tr><th>工作经验</th><td>2012.10-2013.2 银江股份·智能交通创新协调中心</td></tr>
-
-              <tr>
-                <th rowspan="4">奖惩情况</th>
-                <td>大一获得三等奖学金</td>
-              </tr>
-              <tr>
-                <td>大二暑期社会实践校级先进个人</td>
-              </tr>
-              <tr>
-                <td>第二届服务外包创新应用大赛顽强拼搏奖</td>
-              </tr>
-              <tr>
-                <td>2012校挑战杯大学生课外学术科技作品竞赛一等奖</td>
-              </tr>
-              
-              
-            </table>
-
-            <img style="position:absolute;left:500px;top:300px;height:200px;"src="2c.png"></img>
-          </section>
-    <br />
-
-        </div>
-
-
-
-    <div class="slide offline-storage" id="zwjs-kfjy-jl">
-       <section>
-
-        <h2>自我介绍</h2>
-        <hr>
-        汤可吉，大四学生，爱笑，乐观开朗，喜欢交朋友，爱好广泛，对自己未知的大部分东西都感兴趣；<br />
-        &nbsp;&nbsp;熟练使用php/ruby、js, 喜欢rails，但只是自己捣鼓，没有项目经验，熟悉spine(js的一个MVC框架)、jquery；<br />
-        &nbsp;&nbsp;&nbsp;&nbsp;喜欢玩交互设计、美工、精简设计，浏览各种国外网站，擅长PS、AE，玩过html5游戏开发；<br />
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;熟悉ubuntu、git、敏捷开发,乐于分享,研究web算法，使用主流的关联数据库，NOSQL没经验；<br />
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;缺点：没有养成多写文档的好习惯，记录的事情不够有条理，有时候会钻牛角尖<br />
-        阅读书籍：《ruby编程语言》、《Web敏捷开发之道_应用Rails进行Web敏捷开发》、《ruby on rails社区网站开发》、
-        《基于MVC的JavaScript Web 富应用开发》、《web智能算法》等
-
-        <h2>开发经验</h2>
-        <hr>
-        智能交通多源异类模拟诱导屏（web版）<br />
-        实时交通路况系统（web版，android版）<br />
-        交通云（基于openstack）<br />
-        服务流程控制（基于mule esb）<br />
-        浙江省信息安全产业技术创新战略联盟 <a style="color:blue;" href="http://www.zjisa.com" target="_blank">http://zjisa.com</a> <br />
-        智能交通与安全实验室 <a style="color:blue;" href="http://its.hznu.edu.cn" target="_blank">http://its.hznu.edu.cn</a> <br />
-
-
-        <img style="position:absolute;left:500px;top:300px;" src="aza3.png"></img>
-        </section>
-      </div>
-
-
-        <div class="slide offline-storage" id="to-easyread">
-          <header> <h1></h1></header>
-    <section>
-      <h2> 致easyread</h2>
-      <hr>
-      <h2>2月底看到贵公司在ruby-china上3个月前的招聘，当时就强烈希望加入贵公司，因为我喜欢这氛围，我想学习，锻炼，为团队做出贡献，哥哥姐姐，亲们，给我个机会吧，我想做rails开发，不，打杂也行啊！</h2><br />
-
-      <div style="position:absolute;left:450px;top:350px;"><h1 style="font-size:200%;">心向往之</h1>
-        <span id="left-init-key" class="key">&rarr;</span>
-          <img src="easyread.png"></img>
-      </div>
-
-      <h2>交流</h2>
-      <hr>
-      网名：蔚蓝星魂（同新浪微博）<br />
-      github：<a style="color:blue;" href="https://github.com/wlxhsjjqtlcs" target="_blank">https://github.com/wlxhsjjqtlcs</a> <br />
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a style="color:blue;" href="https://github.com/tdseed" target="_blank">https://github.com/tdseed</a> <br />
-       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="color:blue;" href="https://github.com/tdbutterfly" target="_blank">https://github.com/tdbutterfly</a>(blog)<br />
-      heroku: <a style="color:blue;" href="http://tdseed.herokuapp.com/" target="_blank">http://tdseed.herokuapp.com/</a> <br />
-      Personal site: <a style="color:blue;" href="http://tdbutterfly.com" target="_blank">http://tdbutterfly.com</a>
-
-        </section>
-      </div>
-
-
-
-    </div> <!-- slides -->
-    </div>
-
-    
-    <!--[if lt IE 9]>
-    <script 
-      src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js">
-    </script>
-    <script>CFInstall.check({ mode: "overlay" });</script>
-    <![endif]-->
-
-    <script src="src/prettify/prettify.js" onload="prettyPrint();" defer></script>
-    <script src="js/utils.js"></script>
-    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-    <script>
-      // Check if new appcache is available, load it, and reload page.
-      if (window.applicationCache) {
-        window.applicationCache.addEventListener('updateready', function(e) {
-          if (window.applicationCache.status == window.applicationCache.UPDATEREADY) {
-            window.applicationCache.swapCache();
-            if (confirm('A new version of this site is available. Load it?')) {
-              window.location.reload();
-            }
-          }
-        }, false);
-      }
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-15028909-5']);
-      _gaq.push(['_trackPageview']);
-      _gaq.push(['_trackPageLoadTime']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
-  </body>
-</html>
+    </body>
+<html>
