--- a/app/views/zh/index.html.erb
+++ b/app/views/zh/index.html.erb
@@ -151,23 +151,19 @@
         <div class="slide offline-storage" id="to-easyread">
           <header> <h1></h1></header>
     <section>
-      <h2> 致easyread</h2>
-      <hr>
-      <h2>2月底看到贵公司在ruby-china上3个月前的招聘，当时就强烈希望加入贵公司，因为我喜欢这氛围，我想学习，锻炼，为团队做出贡献，哥哥姐姐，亲们，给我个机会吧，我想做rails开发，不，打杂也行啊！</h2><br />
+
 
       <div style="position:absolute;left:450px;top:350px;"><h1 style="font-size:200%;">心向往之</h1>
         <span id="left-init-key" class="key">&rarr;</span>
-          <img src="easyread.png"></img>
+          <!-- <img src="easyread.png"></img> -->
       </div>
 
       <h2>交流</h2>
       <hr>
-      <p>
       网名：蔚蓝星魂（同新浪微博）<br />
       github：<a style="color:blue;" href="https://github.com/tdseed" target="_blank">https://github.com/tdseed</a> <br />
       Ruby China: <a style="color:blue;" href="http://ruby-china.org/tdseed" target="_blank">tdseed</a> <br />
       Personal site: <a style="color:blue;" href="http://tdbutterfly.com" target="_blank">http://wlxh.logdown.com/</a>
-      </p>
 
         </section>
       </div>
